# SEND

./: .dockerignore  .env.example  .gitignore  compose.debug.yaml  compose.yaml  firebase.json  hackovium.md  logicex.json  readme.md  tmp-lecture-verify.json
backend/: Dockerfile  build.gradle  caching idea.txt  run_local.ps1  settings.gradle
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  firebase.ts  index.css
frontend/src/auth/: AuthContext.tsx  providerConfig.ts
ocaml-engine/: dune-project
ocaml-engine/engine/: README.md  dune  engine.ml  engine.mli  engine_error.ml  engine_error.mli  simulation.ml  simulation.mli
ocaml-engine/execuctor/: README.md  dune  executor.ml  executor.mli  executor_registry.ml  executor_registry.mli
ocaml-engine/execuctor/nodes/: add.ml  and_node.ml  average.ml  buy.ml  const_bool.ml  const_number.ml  const_string.ml  divide.ml  dune  eq.ml  fetch_company_profile.ml  fetch_financial_statements.ml  fetch_fundamentals.ml  fetch_price.ml  gt.ml  gte.ml  if_node.ml  lt.ml  lte.ml  multiply.ml  negate.ml  neq.ml  not_node.ml  or_node.ml  primitive_registry.ml  sell.ml  subtract.ml  subtract.mli  to_bool.ml  to_number.ml  to_string.ml
ocaml-engine/graph/: README.md  dune  graph.ml  graph.mli  graph_error.ml  graph_error.mli  node.ml  node.mli  node_id.ml  node_id.mli  utop_load.ml
ocaml-engine/market_data/: dune  market_data_reader.ml  market_data_reader.mli
ocaml-engine/spec/: README.md  dune  node_spec_decoder.ml  node_spec_decoder.mli  spec_error.ml  spec_error.mli
(+202 files in other folders)
